--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
   "license": "ISC",
   "dependencies": {
     "@webpack-cli/init": "^1.0.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "prop-types": "^15.7.2",
+    "react": "16",
+    "react-dom": "16"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
@@ -28,6 +29,7 @@
     "babel-preset-react": "^6.24.1",
     "html-webpack-plugin": "^4.5.0",
     "rimraf": "^3.0.2",
+    "typescript": "^4.0.5",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.1.0",
     "webpack-dev-server": "^3.11.0"
@@ -43,6 +45,7 @@
   "prettier": {
     "trailingComma": "es5",
     "arrowParens": "avoid",
+    "printWidth": 75,
     "tabWidth": 2,
     "semi": false,
     "singleQuote": true
