--- a/.babelrc
+++ b/.babelrc
@@ -11,5 +11,8 @@
             }
         ],
         "@babel/react"
+    ],
+    "plugins" : [
+      ["@babel/plugin-proposal-class-properties"]
     ]
 }
