--- a/package.json
+++ b/package.json
@@ -13,27 +13,27 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@webpack-cli/init": "^1.0.2",
-    "prop-types": "^15.7.2",
-    "react": "16",
-    "react-dom": "16"
+    "@webpack-cli/init": "^1.1.3",
+    "prop-types": "^15.8.1",
+    "react": "^16",
+    "react-dom": "^16"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/preset-react": "^7.12.5",
+    "@babel/core": "^7.18.10",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-env": "^7.18.10",
+    "@babel/preset-react": "^7.18.6",
     "babel-cli": "^6.26.0",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^8.2.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "html-webpack-plugin": "^4.5.0",
+    "html-webpack-plugin": "^5.5.0",
     "rimraf": "^3.0.2",
-    "typescript": "^4.0.5",
-    "webpack": "^5.4.0",
-    "webpack-cli": "^4.1.0",
-    "webpack-dev-server": "^3.11.0"
+    "typescript": "^4.7.4",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.10.0"
   },
   "eslintConfig": {
     "extends": "react-app",
