--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "braces": "^2.3.1",
+    "ejs": "^3.1.7",
+    "glob-parent": "^5.1.2",
+    "got": "^11.8.5",
     "html-webpack-plugin": "^5.5.0",
     "rimraf": "^3.0.2",
     "typescript": "^4.7.4",
